{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 36,
  "lineage": "4f7a054c-96c4-3855-02c2-451fbb7ccc9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170565538301:internet-gateway/igw-095da16d494d2ae30",
            "id": "igw-095da16d494d2ae30",
            "owner_id": "170565538301",
            "region": "us-east-1",
            "tags": {
              "Name": "springboot-eks-igw"
            },
            "tags_all": {
              "Name": "springboot-eks-igw"
            },
            "vpc_id": "vpc-0d82ab8ecf477b434"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170565538301:route-table/rtb-00ad59933eba70f8e",
            "id": "rtb-00ad59933eba70f8e",
            "owner_id": "170565538301",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-095da16d494d2ae30",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "springboot-eks-public-rt"
            },
            "tags_all": {
              "Name": "springboot-eks-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d82ab8ecf477b434"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb5d1161aad696c3",
            "region": "us-east-1",
            "route_table_id": "rtb-00ad59933eba70f8e",
            "subnet_id": "subnet-039b349fa3c47fa53"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e876274532537d90",
            "region": "us-east-1",
            "route_table_id": "rtb-00ad59933eba70f8e",
            "subnet_id": "subnet-0082fc25d9a0bfd14"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170565538301:security-group/sg-0ae4431ba2481b3a4",
            "description": "Security group for Spring Boot EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae4431ba2481b3a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Spring Boot App",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "springboot-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "170565538301",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "springboot-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "springboot-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d82ab8ecf477b434"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170565538301:subnet/subnet-039b349fa3c47fa53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039b349fa3c47fa53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170565538301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "springboot-eks-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "springboot-eks-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d82ab8ecf477b434"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170565538301:subnet/subnet-0082fc25d9a0bfd14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0082fc25d9a0bfd14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170565538301",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "springboot-eks-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "springboot-eks-public-subnet-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d82ab8ecf477b434"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:170565538301:vpc/vpc-0d82ab8ecf477b434",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f606b274bddbe39a",
            "default_route_table_id": "rtb-0f4301b47cd16b184",
            "default_security_group_id": "sg-012d5a97e738151da",
            "dhcp_options_id": "dopt-0e6e8d69e004b5254",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d82ab8ecf477b434",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4301b47cd16b184",
            "owner_id": "170565538301",
            "region": "us-east-1",
            "tags": {
              "Name": "springboot-eks-vpc"
            },
            "tags_all": {
              "Name": "springboot-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}